@@ -1,6 +1,15 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.5.0
 
+  *) Windows:  Create named shared memory segments under the "Local"
+     namespace if the caller is unprivileged, fixing an inability of
+     unprivileged callers to use apr_shm_create() with named shared
+     memory segments under recent Windows.  As before, shared memory
+     segments are created under the "Global" namespace for privileged
+     callers.  Add apr_shm_create_ex() and apr_shm_attach_ex(), which
+     provide the ability to override the normal namespace selection.
+     [Jeff Trawick]
+
   *) Update compile settings for MINT OS.  PR 47181. [Alan Hourihane
      <alanh fairlite.co.uk>]
 
